--- a/views/tweet.html
+++ b/views/tweet.html
@@ -3,25 +3,37 @@
 
 <main id="tweetMain">
   <h1>Fake Tweets</h1>
-  <div>
-    Want to <a href="/create">create</a> a tweet ?
-    % for tweet in tweets:
-
-
-    <section class="tweet">
-      <h1>{{tweet["title"]}}</h1>
-      <p id="Tweet_time">{{tweet["iat"]}}</p>
-      <p>{{tweet["description"]}} </p>
-      <article>
-        <form action="/delete/{{tweet['id']}}" method="POST">
-          <button>🗑️</button>
+  <div id="createTweetContainer">
+    <div>
+      <h1>Create your tweet</h1>
+      <div>
+        <form>
+          <div>
+            <label for="tweet_title">Title :</label>
+            <input type="text" name="tweet_title" placeholder="Enter your title">
+          </div>
+          <div>
+            <label for="tweet_description">Description :</label>
+            <textarea name="tweet_description" cols="30" rows="10" placeholder="Enter your description"
+              data-validate="str" data-min="1" data-max="100"></textarea>
+          </div>
+          <button type="submit" onsubmit="validate(sendTweet)" data-default="Tweet"
+            data-await="Tweeting...">Create</button>
         </form>
-        <a
-          href="/updating?title={{tweet['title']}}&description={{tweet['description']}}&iat={{tweet['iat']}}&id={{tweet['id']}}">✏️</a>
-      </article>
+      </div>
+    </div>
 
-    </section>
-    % end
+    <template>
+      <section class="tweet">
+        <h1>title</h1>
+        <p id="Tweet_time">iat</p>
+        <p>description </p>
+        <article>
+          <button>🗑️</button>
+          <button>✏️</button>
+        </article>
+      </section>
+    </template>
 
 
     % if tweets == []:
